2009-06-16  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolBar.cs: Expose as internal the code used to show a dropdown menu.
	* PrintPreviewDialog.cs: Handle the down/up arrow keys for our
	DropDown element.
	Fixes #509152.

2009-06-16  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridView.cs: Scrolling fixes.
	[Fixes bug #512816]

2009-06-16  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridView.cs, DataGridViewRowCollection.cs: Clean up a bit and 
	optimize for batch adding rows.

2009-06-16  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridView.cs: Avoid calling ReBind twice during the initial data 
	binding.
	[Fixes bug #512807]

2009-06-16  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridView.cs: Suppress invalidation during data binding.
	[Fixes part of bug #512807]

2009-06-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* PrintPreviewDialog.cs: Tune the navigation among the buttons and
	controls that are part of our ToolBar, so we can mimic the behaviour
	observed in .Net, by handling also the arrow keys and doing the
	preprocess for them too.
	Fixes the remaining bits of #509142.

2009-06-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolBar.cs: Expose the current item as internal.
	* PrintPreviewDialog.cs: Tune the TabStop property for
	PrintPreviewControl/ToolBar so we match the .net scenario regarding
	Tab navigation. Also implement support to navigate throughout the
	items in the ToolBar.
	Fixes #509142.

2009-06-09  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridViewComboBoxCell.cs, DataGridViewComboBoxColumn.cs: 
	Implement items syncing in the non-databound scenario.
	[Fixes bug #494031]

2009-06-09  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridView.cs: Call OnCellValidating and OnCellValidated and 
	handle the Cancel accordingly.
	[Fixes bug #506838]

2009-06-09  Ivan N. Zlatev  <contact@i-nz.net>

	* DataGridViewBand.cs: Fix a typo in DefaultHeaderCellType.
	[Fixes bug #506796]
