@@ -1,3 +1,10 @@
+2009-06-17  Jonathan Pobst  <monkey@jpobst.com>
+
+	* ComboBox.cs: When using AddRange on a sorted combobox, don't
+	try to use our inefficient sorted insert method, just append
+	it and sort the whole thing at then end.
+	[Fixes bug #511247]
+
 2009-06-16  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* ToolBar.cs: Expose as internal the code used to show a dropdown menu.
